syntax = "proto3";

package test.server.grpc.apo;

option go_package = "github.com/kumahq/kuma/test/server/grpc/api";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello(HelloRequest) returns (HelloReply) {}
  rpc SayHellos(stream HelloRequest) returns (stream HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest { string name = 1; }

// The response message containing the greetings
message HelloReply { string message = 1; }
